--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "upload": "node upload-supabase.js"
   }
 }
